border fix on mobile

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1119,6 +1119,8 @@ body {
             }
 
             .input-body {
+                border-radius: 0px;
+
                 @media (max-width: 700px) {
                     height: 40px!important;
                     min-height: auto!important;
